--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,9 +6,220 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国_1
+    type: vmess
+    server: 103.160.204.37
+    port: 80
+    cipher: auto
+    uuid: 185d6ff9-a0a7-4d39-f3e8-783b7a6bbc79
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: tui.vtcss.top
+  - &id002
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 172.67.27.227
+    server: 172.64.169.199
+    port: 80
+    cipher: auto
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: dp4.scproxy.top
+  - &id003
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: dongtaiwang3.com
+    port: 443
+    cipher: auto
+    uuid: 6deddb7f-e557-42db-bfa0-cf40b36b27e2
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: d.freeh1.xyz
+    network: ws
+    ws-opts:
+      path: /dongtaiwang.com
+      headers:
+        host: d.freeh1.xyz
+  - &id004
+    name: 🇳🇱_NL_荷兰->🇺🇸_US_美国
+    type: vmess
+    server: 188.114.97.152
+    port: 80
+    cipher: auto
+    uuid: 185d6ff9-a0a7-4d39-f3e8-783b7a6bbc79
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: tui.vtcss.top
+  - &id005
+    name: 🇭🇰_HK_香港->🇸🇬_SG_新加坡
+    type: vmess
+    server: 219.76.13.167
+    port: 443
+    cipher: auto
+    uuid: 7fcb4a27-f818-3377-af56-cc08bcb42b5d
+    alterId: 1
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /db
+      headers:
+        host: e.cn-db.top
+  - &id006
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国_2
+    type: vmess
+    server: 103.160.204.112
+    port: 80
+    cipher: auto
+    uuid: 185d6ff9-a0a7-4d39-f3e8-783b7a6bbc79
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: tui.vtcss.top
+  - &id007
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国_3
+    type: vmess
+    server: 103.160.204.204
+    port: 2082
+    cipher: auto
+    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: tui.vtcss.top
+  - &id008
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国_4
+    type: vmess
+    server: 103.160.204.162
+    port: 2082
+    cipher: auto
+    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: tui.vtcss.top
+  - &id009
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 104.25.232.114
+    port: 2082
+    cipher: auto
+    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: tui.vtcss.top
+  - &id010
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国_5
+    type: vmess
+    server: 103.160.204.123
+    port: 2082
+    cipher: auto
+    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: tui.vtcss.top
+  - &id011
+    name: 🇨🇷_CR_哥斯达黎加->🇺🇸_US_美国
+    type: vmess
+    server: 190.93.247.216
+    port: 2082
+    cipher: auto
+    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: tui.vtcss.top
+  - &id012
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+    type: vmess
+    server: 66.81.247.58
+    port: 443
+    cipher: auto
+    uuid: be74ca03-6a7c-4c88-edc2-c6434ead0cfa
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /16575
+      headers:
+        host: cdnca1.digisport.shop
+  - &id013
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 172.64.103.122
+    port: 8080
+    cipher: auto
+    uuid: 0ea60ebb-632d-4226-893a-cccc2053dbf5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: haxus3.vpn66.eu.org
+  - &id014
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    type: vmess
+    server: cdn.twitter.now.cc
+    port: 443
+    cipher: auto
+    uuid: 8d2ba456-2f0d-4c13-b8a0-bff99c679709
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ikun
+      headers:
+        host: vceu3e.twittei.me
+  - &id015
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 172.64.203.172
     port: 80
     cipher: auto
     uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
@@ -20,14 +231,116 @@ proxies:
       path: /shirker
       headers:
         host: dp4.ilovescp.com
-  - &id002
-    name: 🇯🇵_JP_日本
+  - &id016
+    name: 🇫🇷_FR_法国
     type: ss
-    server: 3.112.225.4
+    server: 54.36.174.181
+    port: 8119
+    password: cdBIDV42DCwnfIN
+    cipher: aes-256-gcm
+  - &id017
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 64.32.20.103
+    port: 40039
+    cipher: auto
+    uuid: c1bad9a6-1482-4941-a0c4-e85f3cbbcb5a
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: mci.bamarambash.monster
     port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id003
+    cipher: auto
+    uuid: 8f74ec8a-971c-11ed-a8fc-0242ac120002
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /b8767a6a-1c30-11ee-ba76-9ee097a90b8b
+      headers:
+        host: b8767a6a-1c30-11ee-ba76-9ee097a90b8b.bamarambash.monster
+  - &id019
+    name: 🇦🇺_AU_澳大利亚
+    type: vmess
+    server: 139.99.245.164
+    port: 49921
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id020
+    name: 🇯🇵_JP_日本
+    type: trojan
+    server: kbawsjp2.aiopen.cfd
+    port: 443
+    udp: true
+    password: 3c1f22a0-2aec-46ed-b0ee-9c09b8cafa1d
+    sni: 4-193-105-141.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id021
+    name: 🇸🇬_SG_新加坡
+    type: trojan
+    server: kbawssg1.aiopen.cfd
+    port: 443
+    udp: true
+    password: 3c1f22a0-2aec-46ed-b0ee-9c09b8cafa1d
+    sni: 4-193-105-141.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id022
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: arvancloud.ir-Uc.snappfood.SO.ddns001.net
+    port: 443
+    cipher: auto
+    uuid: 8f74ec8a-971c-11ed-a8fc-0242ac120002
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /1c5854ba-1b44-11ee-a146-8213fd3be4b9
+      headers:
+        host: 1c5854ba-1b44-11ee-a146-8213fd3be4b9.bamarambash.monster
+  - &id023
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: cf1.992688.xyz
+    port: 8080
+    cipher: auto
+    uuid: f467f4da-2226-448d-a30d-463ef10548ac
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: vcus2.vpn66.eu.org
+  - &id024
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+    type: vmess
+    server: 104.31.16.46
+    port: 2082
+    cipher: auto
+    uuid: 58fe1542-5290-40ad-815a-77707a81afe5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /IOebhLMhl1CTbFHbL95myfRX2
+      headers:
+        host: ca5.tehme100.fun
+  - &id025
     name: 🇺🇸_US_美国->🇫🇷_FR_法国
     type: vmess
     server: cdn.narutos.top
@@ -42,262 +355,23 @@ proxies:
       path: /SMNxcwVdTTzcou9yQftDyZcCGQui9a
       headers:
         host: paris.yj2022.gq
-  - &id004
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国_1
+  - &id026
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
     type: vmess
-    server: 103.160.204.69
-    port: 2082
-    cipher: auto
-    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /blue
-      headers:
-        host: tui.vtcss.top
-  - &id005
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国_2
-    type: vmess
-    server: 103.160.204.48
-    port: 2082
-    cipher: auto
-    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /blue
-      headers:
-        host: tui.vtcss.top
-  - &id006
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国_3
-    type: vmess
-    server: 103.160.204.71
-    port: 2082
-    cipher: auto
-    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /blue
-      headers:
-        host: tui.vtcss.top
-  - &id007
-    name: 🇨🇾_CY_塞浦路斯
-    type: vmess
-    server: wi.saintink.eu.org
+    server: mci.saintink.eu.org
     port: 443
     cipher: auto
-    uuid: 927094d3-d678-4763-8591-e240d0bcae87
+    uuid: c226d9fa-b5a7-4f6e-9532-50137c89311d
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /vuk2.0bad.com/chat
+      path: nl1.v2rayserv.com/vmess
       headers:
-        host: sub2.saintink.eu.org
-  - &id008
-    name: 🇩🇪_DE_德国
-    type: ss
-    server: 89.163.157.4
-    port: 1443
-    password: NGJjN
-    cipher: chacha20-ietf-poly1305
-  - &id009
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国_4
-    type: vmess
-    server: 103.160.204.37
-    port: 2082
-    cipher: auto
-    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /blue
-      headers:
-        host: tui.vtcss.top
-  - &id010
-    name: 🇭🇰_HK_香港
-    type: vmess
-    server: 103.160.204.86
-    port: 2082
-    cipher: auto
-    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /blue
-      headers:
-        host: tui.vtcss.top
-  - &id011
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国_5
-    type: vmess
-    server: 103.160.204.141
-    port: 2082
-    cipher: auto
-    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /blue
-      headers:
-        host: tui.vtcss.top
-  - &id012
-    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡
-    type: vmess
-    server: cfcdn3.sanfencdn.net
-    port: 2052
-    cipher: auto
-    uuid: 16582759-3d20-4804-9c9c-a58ad7b260a8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /zh-cn
-      headers:
-        host: sg3.sanfencdn2.com
-  - &id013
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 172.64.169.199
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: dp4.scproxy.top
-  - &id014
-    name: 🇷🇺_RU_俄罗斯联邦_1
-    type: vmess
-    server: 185.59.218.177
-    port: 443
-    cipher: auto
-    uuid: 8f74ec8a-971c-11ed-a8fc-0242ac120002
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /72d6d25e-1b39-11ee-a5c8-8213fd3be4b9
-      headers:
-        host: 72d6d25e-1b39-11ee-a5c8-8213fd3be4b9.bamarambash.monster
-  - &id015
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 172.64.82.127
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: uk2.scproxy.top
-  - &id016
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
-    type: vmess
-    server: 104.31.16.46
-    port: 2082
-    cipher: auto
-    uuid: 58fe1542-5290-40ad-815a-77707a81afe5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /IOebhLMhl1CTbFHbL95myfRX2
-      headers:
-        host: ca5.tehme100.fun
-  - &id017
-    name: 🇸🇬_SG_新加坡
-    type: ss
-    server: 3.0.147.22
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id018
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_1
-    type: vmess
-    server: 172.64.204.101
-    port: 2052
-    cipher: auto
-    uuid: 6e13ff0b-55a6-3767-8b92-3098fda40927
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /bxqmiao
-      headers:
-        host: bxa.76898102.xyz
-  - &id019
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_2
-    type: vmess
-    server: 162.159.245.41
-    port: 2052
-    cipher: auto
-    uuid: 6e13ff0b-55a6-3767-8b92-3098fda40927
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /bxqmiao
-      headers:
-        host: bxa.76898102.xyz
-  - &id020
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_3
-    type: vmess
-    server: 172.64.169.174
-    port: 2052
-    cipher: auto
-    uuid: 6e13ff0b-55a6-3767-8b92-3098fda40927
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /bxqmiao
-      headers:
-        host: bxa.76898102.xyz
-  - &id021
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_4
-    type: vmess
-    server: 172.64.201.185
-    port: 2052
-    cipher: auto
-    uuid: 6e13ff0b-55a6-3767-8b92-3098fda40927
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /bxqmiao
-      headers:
-        host: bxa.76898102.xyz
-  - &id022
-    name: 🇺🇸_US_美国_3
+        host: 4.saintink.eu.org
+  - &id027
+    name: 🇺🇸_US_美国_9
     type: vmess
     server: cf-lt.sharecentre.online
     port: 80
@@ -311,64 +385,38 @@ proxies:
       path: /shirker
       headers:
         host: dp4.scproxy.top
-  - &id023
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_5
+  - &id028
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
     type: vmess
-    server: 172.64.141.140
-    port: 2052
+    server: 172.64.192.167
+    port: 80
     cipher: auto
-    uuid: 6e13ff0b-55a6-3767-8b92-3098fda40927
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /bxqmiao
+      path: /shirker
       headers:
-        host: bxa.76898102.xyz
-  - &id024
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_6
+        host: uk2.scproxy.top
+  - &id029
+    name: 🇨🇾_CY_塞浦路斯->🇬🇧_GB_英国
     type: vmess
-    server: 162.159.242.238
-    port: 2052
-    cipher: auto
-    uuid: 6e13ff0b-55a6-3767-8b92-3098fda40927
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /bxqmiao
-      headers:
-        host: bxa.76898102.xyz
-  - &id025
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_7
-    type: vmess
-    server: 172.64.108.66
-    port: 2052
-    cipher: auto
-    uuid: 6e13ff0b-55a6-3767-8b92-3098fda40927
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /bxqmiao
-      headers:
-        host: bxa.76898102.xyz
-  - &id026
-    name: 🇷🇺_RU_俄罗斯联邦_2
-    type: vmess
-    server: 45.144.179.138
+    server: wi.saintink.eu.org
     port: 443
     cipher: auto
-    uuid: 96cbe4a6-5728-42df-dc7a-ceb9b51a3db5
+    uuid: 927094d3-d678-4763-8591-e240d0bcae87
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
-    network: http
-  - &id027
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    network: ws
+    ws-opts:
+      path: /vuk2.0bad.com/chat
+      headers:
+        host: sub2.saintink.eu.org
+  - &id030
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
     server: 162.159.251.216
     port: 8080
@@ -382,62 +430,6 @@ proxies:
       path: /
       headers:
         host: vceu3.vpn66.eu.org
-  - &id028
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: cf2.992688.xyz
-    port: 8080
-    cipher: auto
-    uuid: 0ea60ebb-632d-4226-893a-cccc2053dbf5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: haxus3.vpn66.eu.org
-  - &id029
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 172.67.65.210
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: dp3.scproxy.top
-  - &id030
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_8
-    type: vmess
-    server: 141.101.120.188
-    port: 2052
-    cipher: auto
-    uuid: 6e13ff0b-55a6-3767-8b92-3098fda40927
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /bxqmiao
-      headers:
-        host: bxa.76898102.xyz
-  - &id031
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 64.32.24.210
-    port: 48659
-    cipher: auto
-    uuid: cff9d860-7330-4ee1-b072-7142ddf1571d
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -494,7 +486,6 @@ proxy-groups:
       - *id028
       - *id029
       - *id030
-      - *id031
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -530,7 +521,6 @@ proxy-groups:
       - *id028
       - *id029
       - *id030
-      - *id031
   - name: SELECT
     type: select
     proxies:
@@ -564,7 +554,6 @@ proxy-groups:
       - *id028
       - *id029
       - *id030
-      - *id031
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
